# thrift

./: CMakeLists.txt
lib/cocoa/: CMakeLists.txt
lib/cocoa/src/protocol/: TProtocol.h
lib/cocoa/src/server/: TSocketServer.h  TSocketServer.m
lib/cocoa/src/transport/: TNSStreamTransport.m
test/cocoa/: CMakeLists.txt
test/cocoa/src/: TestServer.m
